@@ -1,3 +1,8 @@
+1585.	[build]		tmark
+	Files related to YANG and netconf are now only installed
+	when the build is configured with --with-syspro.
+	(Gitlab #584,!338, git )
+
 1584.	[doc]		marcin
 	Documented Kea Configuration Backend in the Kea Administrator
 	Reference Manual.
@@ -13,7 +18,6 @@
 	Input values for DHCPv4 and DHCPv6 options of type 'string'
 	will now be trimmed of any trailing null bytes (0x0).
 	(Gitlab #539, !330, git b126558e9e39e9bff517dceac25a00e96d150085)
-
 
 1581.	[bug]		marcin
 	Corrected a bug whereby the DHCPv6 server did not take into
